WRAP_GGO(pctlluconverter_GGO_C pctlluconverter.ggo)
add_executable(pctlluconverter pctlluconverter.cxx ${pctlluconverter_GGO_C})
TARGET_LINK_LIBRARIES(pctlluconverter ${RTK_LIBRARIES})
TARGET_LINK_LIBRARIES(pctlluconverter ${ITK_LIBRARIES})
TARGET_LINK_LIBRARIES(pctlluconverter ${CLHEP_LIBRARIES})
IF(PCT_WITH_GEANT4)
  TARGET_LINK_LIBRARIES(pctlluconverter pctGeant4)
ENDIF(PCT_WITH_GEANT4)
TARGET_LINK_LIBRARIES(pctlluconverter ${ROOT_LIBRARIES})
