WRAP_GGO(pctpaircuts_GGO_C pctpaircuts.ggo)
add_executable(pctpaircuts pctpaircuts.cxx ${pctpaircuts_GGO_C})
TARGET_LINK_LIBRARIES(pctpaircuts ${RTK_LIBRARIES})
TARGET_LINK_LIBRARIES(pctpaircuts ${ITK_LIBRARIES})
TARGET_LINK_LIBRARIES(pctpaircuts ${CLHEP_LIBRARIES})
IF(PCT_WITH_GEANT4)
  TARGET_LINK_LIBRARIES(pctpaircuts pctGeant4)
ENDIF(PCT_WITH_GEANT4)
#message(WARNING ${ROOT_LIBRARIES})
TARGET_LINK_LIBRARIES(pctpaircuts ${ROOT_LIBRARIES} RooFit RooFitCore Minuit)
