IF(NOT WIN32)
  WRAP_GGO(pctpairprotonsLMU_IMPCT_GGO_C pctpairprotonsLMU_IMPCT.ggo)
  add_executable(pctpairprotonsLMU_IMPCT pctpairprotonsLMU_IMPCT.cxx ${pctpairprotonsLMU_IMPCT_GGO_C})
  TARGET_LINK_LIBRARIES(pctpairprotonsLMU_IMPCT ${RTK_LIBRARIES})
  TARGET_LINK_LIBRARIES(pctpairprotonsLMU_IMPCT ${ITK_LIBRARIES})
  TARGET_LINK_LIBRARIES(pctpairprotonsLMU_IMPCT ${CLHEP_LIBRARIES})
  IF(PCT_WITH_GEANT4)
    TARGET_LINK_LIBRARIES(pctpairprotonsLMU_IMPCT pctGeant4)
  ENDIF(PCT_WITH_GEANT4)
  TARGET_LINK_LIBRARIES(pctpairprotonsLMU_IMPCT ${ROOT_LIBRARIES})
ENDIF(NOT WIN32)